tests/ui/unicode_caret.stderr
Error [E0109]: text isn't joined with `+`
  --> tests/ui/unicode_caret.jet:3:11
    |
  3 |     print(日本語 + "!");
    |           ^^^^^^^^^^^^
 Why: there's one way to build text: interpolation (S8)
 Fix: write the pieces inside one string: "{a}{b}"
