tests/ui/unicode_caret.lex
fn main() {
    val 日本語 = "にほんご";
    print(日本語 + "!");
}
